<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background6"
    tools:context=".Privacy">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Privacy and User Data Safety Policy"
        android:textStyle="bold"
        app:fontFamily="@font/century_gothic"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1. Data collection and Usage"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        app:fontFamily="@font/century_gothic"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:textColor="@color/black"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data1"
        android:textStyle="bold"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        app:fontFamily="@font/century_gothic"
        android:justificationMode="inter_word"
        android:textColor="@color/black"
        android:textSize="15dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2. Data Security Measures"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:fontFamily="@font/century_gothic"
        android:layout_marginRight="55dp"
        android:textColor="@color/black"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data2"
        android:textStyle="bold"
        android:layout_marginLeft="55dp"
        app:fontFamily="@font/century_gothic"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:justificationMode="inter_word"
        android:textColor="@color/black"
        android:textSize="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3. User Control and Consent"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            app:fontFamily="@font/century_gothic"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data3"
            android:textStyle="bold"
            android:layout_marginLeft="55dp"
            app:fontFamily="@font/century_gothic"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4. Third-Party Services"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            app:fontFamily="@font/century_gothic"
            android:layout_marginTop="20dp"
            android:layout_marginRight="65dp"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data4"
            android:textStyle="bold"
            android:layout_marginLeft="55dp"
            app:fontFamily="@font/century_gothic"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5. Data Retention"
            android:textStyle="bold"
            app:fontFamily="@font/century_gothic"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="90dp"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data5"
            android:textStyle="bold"
            android:layout_marginLeft="55dp"
            app:fontFamily="@font/century_gothic"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:justificationMode="inter_word"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="15dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
